# projet_sdp

./: README.md  pyproject.toml
.github/workflows/: lint.yml
data/: large_instance.json  medium_instance.json  test.json  toy_instance.json
examples/: epsilon-constraint.ipynb  introduction.ipynb  preferences.ipynb
projet_sdp/: decider.py  generator.py  loader.py  model.py  ploter.py  preferences.ipynb  test.ipynb
